--- a/src/Feed.css
+++ b/src/Feed.css
@@ -1,5 +1,5 @@
 .feed {
-  flex: 1;
+  flex: 1 1;
   padding: 0px;
   margin: 0px;
   display: flex;
@@ -7,7 +7,6 @@
   justify-content: center;
   align-items: center;
 }
-
 .post__button{
   width: 100px;
   height: 50px;
